fix: overflow of large titles on organization carousel item

--- a/src/MMIP.Client/Components/OrganizationCarouselItem.razor.css
+++ b/src/MMIP.Client/Components/OrganizationCarouselItem.razor.css
@@ -1,8 +1,14 @@
-﻿h1 {
+﻿.container {
+  position: relative;
+}
+
+#text {
+  position: absolute;
+  max-height: 4em;
+  overflow: hidden;
+}
+
+h1 {
   color: var(--main-bg-color);
   text-shadow: black 1px 0 0.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
